Ticket payments integration and dashboards charts

--- a/eticket-frontend/src/index.html
+++ b/eticket-frontend/src/index.html
@@ -39,8 +39,8 @@
   <app-root></app-root>
   <script src="https://js.stripe.com/v3/" data-locale="auto"></script>
   <script type="text/javascript">
-    var stripe = Stripe('pk_test_51H3yLSFGFEZHS7SEy2IQTdUhUbNqWkc4o9llu31P9BHHxlmLYREt6N1fDCbJa7Q48n6CpyRnG6l7f22ltVhwmeuZ00wE3EVGxG', {
-      locale: 'en'
+    var stripe = Stripe('', {
+      locale: ''
     });
     var elements = stripe.elements();
   </script>
